--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "type-check": "tsc --noEmit --incremental --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.0",
     "@next/font": "^13.2.4",
     "@rooks/use-window-size": "^4.11.2",
     "@types/node": "18.15.11",
@@ -21,11 +25,15 @@
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-preset-env": "8.3.0",
     "react": "18.2.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-scroll": "^1.8.9",
     "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@types/react-burger-menu": "^2.8.3",
+    "@types/react-scroll": "^1.8.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
